--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "app:build": "npm run build:for:electron && npm run electron:builder"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "concurrently": "^9.2.0",
     "cross-env": "^7.0.3",
     "electron": "^37.2.0",
+    "mongodb": "^6.18.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "wait-on": "^8.0.3"
