--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "firebase": "^12.7.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.13",
     "vue-router": "^4.6.4"
