--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -83,7 +83,7 @@ jobs:
             - **`Velin_x.x.x_amd64.AppImage`** - Universale (basta renderlo eseguibile)
 
             ### Android
-            - **`app-universal-release-unsigned.apk`** - APK per Android
+            - **`app-universal-release.apk`** - APK firmato per Android
 
             ---
 
@@ -159,7 +159,7 @@ jobs:
             - **`Velin_x.x.x_amd64.AppImage`** - Universale (basta renderlo eseguibile)
 
             ### Android
-            - **`app-universal-release-unsigned.apk`** - APK per Android
+            - **`app-universal-release.apk`** - APK firmato per Android
 
             ---
 
@@ -235,7 +235,7 @@ jobs:
             - **`Velin_x.x.x_amd64.AppImage`** - Universale (basta renderlo eseguibile)
 
             ### Android
-            - **`app-universal-release-unsigned.apk`** - APK per Android
+            - **`app-universal-release.apk`** - APK firmato per Android
 
             ---
 
@@ -311,7 +311,7 @@ jobs:
             - **`Velin_x.x.x_amd64.AppImage`** - Universale (basta renderlo eseguibile)
 
             ### Android
-            - **`app-universal-release-unsigned.apk`** - APK per Android
+            - **`app-universal-release.apk`** - APK firmato per Android
 
             ---
 
@@ -353,6 +353,13 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Add Rust Android targets
+        run: |
+          rustup target add aarch64-linux-android
+          rustup target add armv7-linux-androideabi
+          rustup target add i686-linux-android
+          rustup target add x86_64-linux-android
+
       - name: Install frontend dependencies
         run: npm ci
 
@@ -371,15 +378,28 @@ jobs:
       - name: Init Android project (CI)
         run: cargo tauri android init
 
-      - name: Build Android APK/AAB (release)
-        run: cargo tauri android build
+      - name: Setup Android signing
+        run: |
+          cd src-tauri/gen/android
+          echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" > keystore.properties
+          echo "password=${{ secrets.ANDROID_KEY_PASSWORD }}" >> keystore.properties
+          echo "${{ secrets.ANDROID_KEY_BASE64 }}" | base64 -d > $RUNNER_TEMP/keystore.jks
+          echo "storeFile=$RUNNER_TEMP/keystore.jks" >> keystore.properties
+
+      - name: Build Android APK (signed)
+        run: cargo tauri android build --apk
+
+      - name: Rename APK
+        run: |
+          cd src-tauri/gen/android/app/build/outputs/apk/universal/release
+          mv app-universal-release.apk app-universal-release.apk || true
 
       - name: Upload APK to Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            src-tauri/gen/android/app/build/outputs/apk/**/release/*.apk
+            src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
