--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -387,7 +387,7 @@ jobs:
           echo "storeFile=$RUNNER_TEMP/keystore.jks" >> keystore.properties
 
       - name: Build Android APK (signed)
-        run: cargo tauri android build --apk
+        run: cargo tauri android build
 
       - name: Rename APK
         run: |
