--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -75,7 +75,7 @@ jobs:
             - **`Velin_x.x.x_x64_en-US.msi`** - Installer MSI
 
             ### macOS
-            - **`Velin_x.x.x_aarch64.dmg`** - Per Mac con chip Apple Silicon (M1/M2/M3)
+            - **`Velin_x.x.x_aarch64.dmg`** - Per Mac con chip Apple Silicon (M1/M2/M3/M4)
             - **`Velin_x.x.x_x64.dmg`** - Per Mac con chip Intel
 
             ### Linux
@@ -101,7 +101,7 @@ jobs:
           args: --target x86_64-unknown-linux-gnu --bundles deb,appimage
 
   release-macos-arm:
-    name: Build macOS Apple Silicon (M1/M2/M3)
+    name: Build macOS Apple Silicon (M1/M2/M3/M4)
     runs-on: macos-latest
     permissions:
       contents: write
@@ -227,7 +227,7 @@ jobs:
             - **`Velin_x.x.x_x64_en-US.msi`** - Installer MSI
 
             ### macOS
-            - **`Velin_x.x.x_aarch64.dmg`** - Per Mac con chip Apple Silicon (M1/M2/M3)
+            - **`Velin_x.x.x_aarch64.dmg`** - Per Mac con chip Apple Silicon (M1/M2/M3/M4)
             - **`Velin_x.x.x_x64.dmg`** - Per Mac con chip Intel
 
             ### Linux
@@ -303,7 +303,7 @@ jobs:
             - **`Velin_x.x.x_x64_en-US.msi`** - Installer MSI
 
             ### macOS
-            - **`Velin_x.x.x_aarch64.dmg`** - Per Mac con chip Apple Silicon (M1/M2/M3)
+            - **`Velin_x.x.x_aarch64.dmg`** - Per Mac con chip Apple Silicon (M1/M2/M3/M4)
             - **`Velin_x.x.x_x64.dmg`** - Per Mac con chip Intel
 
             ### Linux
@@ -375,31 +375,31 @@ jobs:
       - name: Install Tauri CLI
         run: cargo install tauri-cli --locked
 
-      - name: Init Android project (CI)
+      - name: Init Android project
         run: cargo tauri android init
 
       - name: Setup Android signing
         run: |
-          cd src-tauri/gen/android
-          echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" > keystore.properties
-          echo "password=${{ secrets.ANDROID_KEY_PASSWORD }}" >> keystore.properties
+          mkdir -p src-tauri/gen/android
+          echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" > src-tauri/gen/android/keystore.properties
+          echo "password=${{ secrets.ANDROID_KEY_PASSWORD }}" >> src-tauri/gen/android/keystore.properties
           echo "${{ secrets.ANDROID_KEY_BASE64 }}" | base64 -d > $RUNNER_TEMP/keystore.jks
-          echo "storeFile=$RUNNER_TEMP/keystore.jks" >> keystore.properties
+          echo "storeFile=$RUNNER_TEMP/keystore.jks" >> src-tauri/gen/android/keystore.properties
 
       - name: Build Android APK (signed)
         run: cargo tauri android build
 
-      - name: Rename APK
+      - name: List APK files (debug)
         run: |
-          cd src-tauri/gen/android/app/build/outputs/apk/universal/release
-          mv app-universal-release.apk app-universal-release.apk || true
+          echo "Listing APK files in output directory:"
+          find src-tauri/gen/android/app/build/outputs/apk -name "*.apk" -type f
 
       - name: Upload APK to Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
+            src-tauri/gen/android/app/build/outputs/apk/universal/release/*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
